tests/ui/expect-named-struct.stderr
error: Expected named struct
 --> tests/ui/expect-named-struct.rs:5:8
  |
5 | struct Bar(u32, u32, i8);
  |        ^^^

error: Expected named struct
 --> tests/ui/expect-named-struct.rs:8:6
  |
8 | enum Baz {
  |      ^^^

error: Expected named struct
  --> tests/ui/expect-named-struct.rs:13:7
   |
13 | union Bax {
   |       ^^^

error: expected one of: `struct`, `enum`, `union`
  --> tests/ui/expect-named-struct.rs:19:5
   |
19 | pub fn foo() {}
   |     ^^
